--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "dependencies": {
     "@next/font": "13.1.6",
     "@ts-stack/markdown": "^1.4.0",
-    "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "gray-matter": "^4.0.3",
+    "mongodb": "^5.0.1",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -25,6 +25,7 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@types/node": "^18.14.0",
     "@types/react-syntax-highlighter": "^15.5.6"
   }
 }
