--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@next/third-parties": "^14.0.2",
     "@ts-stack/markdown": "^1.4.0",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
