--- a/package.json
+++ b/package.json
@@ -15,12 +15,11 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "eslint": "8.33.0",
-    "eslint-config-next": "13.1.6",
     "gray-matter": "^4.0.3",
     "mongodb": "^5.0.1",
-    "next": "13.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^14.2.28",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-markdown": "^8.0.5",
     "react-syntax-highlighter": "^15.5.0",
     "typescript": "4.9.5"
@@ -29,6 +28,7 @@
     "@types/node": "^18.14.0",
     "@types/react-syntax-highlighter": "^15.5.6",
     "autoprefixer": "^10.4.15",
+    "eslint-config-next": "^14.2.28",
     "postcss": "^8.4.30",
     "tailwindcss": "^3.3.3"
   }
