--- a/package.json
+++ b/package.json
@@ -16,16 +16,18 @@
     "@types/react-dom": "^18.0.10",
     "eslint": "8.33.0",
     "gray-matter": "^4.0.3",
+    "micro": "^10.0.1",
     "mongodb": "^5.0.1",
     "next": "^14.2.28",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^8.0.5",
     "react-syntax-highlighter": "^15.5.0",
+    "stripe": "^18.5.0",
     "typescript": "4.9.5"
   },
   "devDependencies": {
-    "@types/node": "^18.14.0",
+    "@types/node": "^22.x",
     "@types/react-syntax-highlighter": "^15.5.6",
     "autoprefixer": "^10.4.15",
     "eslint-config-next": "^14.2.28",
